[package]
name = "think"
version = "0.1.0"
authors = ["Corey Ryan <corey@coreyr.com>"]
edition = "2024"
rust-version = "1.86"
license = "Apache-2.0"
description = "MCP tool written in rust"

[dependencies]
ftl-sdk = { version = "0.2.10", features = ["macros"] }
mindkit = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.0.4"
spin-sdk = "4.0.0"

[lib]
crate-type = ["cdylib"]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
# Deny categories
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }

# Warn categories  
complexity = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }